# tic-tac-toe-hs

./: LICENSE  README.md  tic-tac-toe-hs.cabal
app/: Main.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
