cabal-version:       >=1.10
name:                tic-tac-toe-hs
version:             0.1.0.0
synopsis:            Tic Tac Toe game in Haskell
description:         A simple console-based Tic Tac Toe game.
license:             BSD-3-Clause
author:              Your Name
maintainer:          your@email.com
build-type:          Simple




executable tic-tac-toe-hs
  main-is:             Main.hs
  hs-source-dirs:      app
  build-depends:       base >=4.14 && <5
  default-language:    Haskell2010
